--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -14,7 +14,7 @@
             <a class="nav-link" href="/about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/add_post">Add New Post</a>
+            <a class="nav-link" href="/addpost">Add New Post</a>
           </li>
         </ul>
       </div>
