--- a/views/post.ejs
+++ b/views/post.ejs
@@ -12,11 +12,20 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="post-heading">
-            <h1><%= post.title %></h1>
-            <h2 class="subheading">Problems look mighty small from 150 miles up</h2>
-            <span class="meta">Posted by
-              <a href="#">Start Bootstrap</a>
-              on <%= post.dateCreated %></span>
+            <form method="POST" action="/posts/<%= post._id %>?_method=PUT" class="tm-contact-form" enctype="application/x-www-form-urlencoded">
+              
+              <input type="text" name="title" id="title" value="<%= post.title %>">
+           
+            
+            <div class="form-group">
+            <textarea name="detail" id="detail"  class="subheading"><%= post.detail %></textarea>
+            </div>
+              <button type="submit"
+                      class="btn btn-primary p-2 mb-4 tm-btn-animate tm-btn-download tm-icon-download "
+                    >
+                      <span>Update Details</span>
+                    </button>
+           </form>
           </div>
         </div>
       </div>
@@ -28,35 +37,18 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p><%= post.detail %></p>
-
-          <h2 class="section-heading">The Final Frontier</h2>
-
-          <p>There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and literally, it is a task to occupy the generations. And no matter how much progress one makes, there is always the thrill of just beginning.</p>
-
-          <p>There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and literally, it is a task to occupy the generations. And no matter how much progress one makes, there is always the thrill of just beginning.</p>
-
-          <blockquote class="blockquote">The dreams of yesterday are the hopes of today and the reality of tomorrow. Science has not yet mastered prophecy. We predict too much for the next year and yet far too little for the next ten.</blockquote>
-
-          <p>Spaceflights cannot be stopped. This is not the work of any one man or even a group of men. It is a historical process which mankind is carrying out in accordance with the natural laws of human development.</p>
-
-          <h2 class="section-heading">Reaching for the Stars</h2>
-
-          <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so delicate, that if you touched it with a finger it would crumble and fall apart. Seeing this has to change a man.</p>
-
-          <a href="#">
-            <img class="img-fluid" src="img/post-sample-image.jpg" alt="">
-          </a>
-          <span class="caption text-muted">To go places and do things that have never been done before – that’s what living is all about.</span>
-
-          <p>Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year mission: to explore strange new worlds, to seek out new life and new civilizations, to boldly go where no man has gone before.</p>
-
-          <p>As I stand out here in the wonders of the unknown at Hadley, I sort of realize there’s a fundamental truth to our nature, Man must explore, and this is exploration at its greatest.</p>
-
-          <p>Placeholder text by
-            <a href="http://spaceipsum.com/">Space Ipsum</a>. Photographs by
-            <a href="https://www.flickr.com/photos/nasacommons/">NASA on The Commons</a>.</p>
+          
         </div>
+             <div class="text-center">
+                  
+                  </div>
+                  <div class="text-center">
+                    <a  href="/posts/<%= post._id %>?_method=DELETE"
+                      class="btn btn-danger p-2 tm-btn-animate tm-btn-download tm-icon-download" onclick="return confirm('ARE YOU SURE?')"
+                    >
+                      <span>Delete Post</span>
+                    </a>
+                  </div>
       </div>
     </div>
   </article>
@@ -66,8 +58,7 @@
   <!-- Footer -->
   <%- include('partials/_footer') -%>
 
-  <!-- Custom scripts for this template -->
-  <script src="js/clean-blog.min.js"></script>
+
 
 </body>
 
