--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,31 +1,46 @@
-<!-- Navigation Bar-->
-<%- include ('partials/_navigation.ejs') %>  
+<%- include('partials/_header') -%>
+
+<body>
+
+  <%- include('partials/_navigation') -%>
 
   <!-- Page Header -->
-  <%- include ('partials/_header.ejs') %>  
+  <header class="masthead" style="background-image: url('img/home-bg.jpg')">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <div class="site-heading">
+            <h1>Clean Blog</h1>
+            <span class="subheading">A Blog Theme by Start Bootstrap</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
 
   <!-- Main Content -->
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-
-            <% for (let i =0; i < posts.length; i++) { %>
-              <div class="post-preview">
-                <a href="/posts/<%= posts[i]._id %>"
-                  <h2 class="post-title">
-                    <%= posts[i].title %> 
-                  </h2>
-                </a>
-                <label for=""> <%= posts[i].detail %></label>
-                <p class="post-meta">Writed by
-                  <a href="#">Nuhgnc</a>
-                  on <%= posts[i].dateCreated %> </p>
-              </div>
-              <hr>
-            <% } %>
-    
-       
-        <br>
+        <% for ( let i = 0; i < posts.length; i++ ) { %>
+        <div class="post-preview">
+          <a href="/posts/<%= posts[i]._id %>">
+            <h2 class="post-title">
+              <%= posts[i].name %>
+            </h2>
+            <h3 class="post-subtitle">
+              <%= posts[i].detail %>
+            </h3>
+          </a>
+          <p class="post-meta">Posted by
+            <a href="https://github.com/TheDelist">Samet Kemal Özdemir</a>
+            <%= posts[i].dateCreated.toLocaleString('en-En', {month: 'long'}) %>
+            <%= posts[i].dateCreated.getDate() %>,
+            <%= posts[i].dateCreated.getFullYear() %></p>
+        </div>
+        <hr>
+        <% } %>
         <!-- Pager -->
         <div class="clearfix">
           <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
@@ -36,15 +51,7 @@
 
   <hr>
 
-  <!-- Footer -->
-  <%- include ('partials/_footer.ejs') %>  
-
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Custom scripts for this template -->
-  <script src="js/clean-blog.min.js"></script>
+  <%- include('partials/_footer') -%>
 
 </body>
 
